2008-03-13  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #512543

	* e-calendar-item.c: Get rid of ENABLE_CAIRO define.

2008-02-18  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #515744

	* e-cursors.c: (e_cursors_init):
	* e-calendar-item.c: (e_calendar_item_draw_month):
	Memory leak fix.

2008-02-18  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bnc #178778

	* e-calendar-item.c: (e_calendar_item_destroy):

2008-02-07  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #249501

	* e-attachment.c: (attachment_guess_mime_type):
	gnome_vfs_get_file_info expects URI,
	thus if file_name contains '%' it failed.

2007-01-25  Johnny Jacob  <jjohnny@novell.com>
  
  	* e-filter-bar.h : Added a cameloperation cancel field for vfolder
  	based search.
	
2008-01-24  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (libemiscwidgets_la_LIBADD): Fix typo:
	s/EVOLUTON_MAIL_LIBS/EVOLUTION_MAIL_LIBS/. No need to use
	CAMEL_LIBS as EVOLUTION_MAIL_LIBS already covers that.

2008-01-24  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #402487

	* e-search-bar.c: (search_now_verb_cb), (scopeoption_changed_cb):
	Memory leak fix.

2008-01-24  Srinivasa Ragavan  <sragavan@novell.com>

	* e-multi-config-dialog.c: (canvas_realize),
	(e_multi_config_dialog_add_page): Enable for Cairofication of the
	settings dialogs's etable.

2008-01-11  Jeffrey Stedfast  <fejj@novell.com>

	Patch by Jean-Christophe BEGUE to fix bug #329692.

	* e-attachment.c (e_attachment_new_from_mime_part): Get the
	content size of the MIME part by calling the new
	camel_mime_part_get_content_size() function.

2008-01-11  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #488213

	* e-spinner.c: (scale_to_size):
	* e-image-chooser.c: (set_image_from_data):
	* e-attachment-bar.c: (e_attachment_bar_create_attachment_cache),
	(update):
	Use global function e_icon_factory_pixbuf_scale for scaling pixbufs.

2008-01-10  Srinivasa Ragavan  <sragavan@novell.com>

	** Add better support to show info/errors
